create path for test
