# server/common/api.yml
@@ -4,17 +4,17 @@ info:
   description: Eric&#39;s demo express server using TypeScript
   version: 1.0.0
 servers:
-- url: /api/v1
+  - url: /api/v1
 tags:
-- name: Examples
-  description: Simple example endpoints
-- name: Specification
-  description: The swagger API specification
+  - name: Examples
+    description: Simple example endpoints
+  - name: Specification
+    description: The swagger API specification
 paths:
   /examples:
     get:
       tags:
-      - Examples
+        - Examples
       description: Fetch all examples
       responses:
         200:
@@ -22,7 +22,7 @@ paths:
           content: {}
     post:
       tags:
-      - Examples
+        - Examples
       description: Create a new example
       requestBody:
         description: an example
@@ -41,14 +41,14 @@ paths:
   /examples/{id}:
     get:
       tags:
-      - Examples
+        - Examples
       parameters:
-      - name: id
-        in: path
-        description: The id of the example to retrieve
-        required: true
-        schema:
-          type: integer
+        - name: id
+          in: path
+          description: The id of the example to retrieve
+          required: true
+          schema:
+            type: integer
       responses:
         200:
           description: Return the example with the specified id
@@ -58,14 +58,14 @@ paths:
           content: {}
     delete:
       tags:
-      - Examples
+        - Examples
       parameters:
-      - name: id
-        in: path
-        description: The id of the example to delete
-        required: true
-        schema:
-          type: integer
+        - name: id
+          in: path
+          description: The id of the example to delete
+          required: true
+          schema:
+            type: integer
       responses:
         200:
           description: Return the deleted example with the specified id
@@ -75,14 +75,14 @@ paths:
           content: {}
     put:
       tags:
-      - Examples
+        - Examples
       parameters:
-      - name: id
-        in: path
-        description: The id of the example to create/update
-        required: true
-        schema:
-          type: integer
+        - name: id
+          in: path
+          description: The id of the example to create/update
+          required: true
+          schema:
+            type: integer
       responses:
         200:
           description: Return the example being updated
@@ -92,14 +92,14 @@ paths:
           content: {}
     patch:
       tags:
-      - Examples
+        - Examples
       parameters:
-      - name: id
-        in: path
-        description: The id of the example to update
-        required: true
-        schema:
-          type: integer
+        - name: id
+          in: path
+          description: The id of the example to update
+          required: true
+          schema:
+            type: integer
       responses:
         200:
           description: Return the example being updated
@@ -107,10 +107,27 @@ paths:
         404:
           description: Example not found
           content: {}
+  /test:
+    get:
+      tags:
+        - test
+      description: Fetch all test
+      responses:
+        200:
+          description: Returns all examples
+          content: {}
+    post:
+      tags:
+        - test
+      description: Create a new test
+      responses:
+        201:
+          description: Returns test created
+          content: {}
   /spec:
     get:
       tags:
-      - Specification
+        - Specification
       responses:
         200:
           description: Return the API specification
@@ -120,10 +137,10 @@ components:
     ExampleRequestNoID:
       title: example
       required:
-      - name
+        - name
       type: object
       properties:
-        id: 
+        id:
           type: integer
           example: 10
         name:
@@ -132,11 +149,11 @@ components:
     ExampleResponse:
       title: example
       required:
-      - id
-      - name
+        - id
+        - name
       type: object
       properties:
-        id: 
+        id:
           type: integer
           example: 10
         name:
